# Sympathy

./: CMakeLists.txt  README.md  compile.bat
include/Sympathy/: Client.cpp  Client.h
include/Sympathy/Server/: Server.cpp  Server.h
src/: main.cpp
